2010-09-29  Anantanarayanan G Iyengar  <ananta@chromium.org>

        Reviewed by Darin Fisher.

        [chromium] Honor z-index specified by a plugin
        https://bugs.webkit.org/show_bug.cgi?id=46223
        
        The Chromium plugin code which implements the iframe shim technique
        for overlaying a windowed plugin with content on the page should
        honor the z-index specified on the plugin widget. If the z-index
        here is greater than the enclosing iframe shim then the plugin
        should be displayed over the iframe. Updated the layout test to test
        for this case. Skipped the plugins/iframe-shims.html layout test on
        platforms which don't support it.

        * src/WebPluginContainerImpl.cpp:

2010-09-28  Vangelis Kokkevis  <vangelis@chromium.org>

        Reviewed by Kenneth Russell.

        [chromium] Keep the accelerated compositor around even after a page is
        done using it to avoid startup costs in pages that frequently switch
        the compositor on and off.
        https://bugs.webkit.org/show_bug.cgi?id=45845

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::setIsAcceleratedCompositingActive):

2010-09-28  Nat Duca  <nduca@chromium.org>

        Reviewed by James Robinson.

        [chromium] invalidateRootLayerRect needs to schedule compositor
        https://bugs.webkit.org/show_bug.cgi?id=46219

        Make sure setRootLayerNedsDisplay is called by root invalidation.
        To avoid confusion about root-layer versus non-root-layer
        behavior, move the root layer damage state to the WebView.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::setRootLayerNeedsDisplay):
        (WebKit::WebViewImpl::scrollRootLayerRect):
        (WebKit::WebViewImpl::invalidateRootLayerRect):
        (WebKit::WebViewImpl::doComposite):
        * src/WebViewImpl.h:

2010-09-28  Jenn Braithwaite  <jennb@chromium.org>

        Reviewed by Dmitry Titov.
