@@ -53,6 +53,7 @@ public:
     virtual WebAccessibilityObject getObjectById(int) = 0;
     virtual bool isValidId(int) const = 0;
     virtual int addOrGetId(const WebAccessibilityObject& object) = 0;
+    virtual bool isCached(const WebAccessibilityObject&) = 0;
 
     virtual void remove(int) = 0;
     virtual void clear() = 0;
